--- a/config_files/configure.yaml
+++ b/config_files/configure.yaml
@@ -3,12 +3,27 @@ BasicSettings:
   ImageChannel: 3
   ReplayBufferOnGPU: True
   Seed: 3710
-  Env_name: ALE/Pong-v5
-  Device: cuda:0
+  Env_name: ALE/Pong-v5 # procgen:procgen-coinrun-v0 ; ALE/Pong-v5 ; mujoco:Humanoid-v4 ; dmc:walker:walk; minigrid:MiniGrid-SimpleCrossingS11N5-v0
+  Device: cuda:0  # DON'T CHANGE THIS! Select GPU from train.py
   Use_amp: True
   Use_cg: True
   Compile: True
   SavePath: None
+
+  ProcGen:
+    DistMode: hard # Options: "easy", "hard", "extreme", "memory", "exploration"
+    NumLevels: 0   # 0 means unlimited levels
+    StartLevel: 0  # Starting seed for level generation
+    MuJoCo:
+      CameraId: 0           # ID of the camera to use for rendering
+      RenderContext: "EGL"  # "EGL" for headless GPU rendering, "glfw" for window rendering
+      FrameSkip: 4          # Number of physics steps per environment step
+    DMControl:
+      CameraId: 0           # ID of the camera to use for rendering
+      FrameSkip: 2          # Number of physics steps per environment step
+    MiniGrid:
+      FullyObserved: False
+      MaxSteps: 300
 
 Evaluate:
    EpisodeNum: 10
@@ -63,19 +78,20 @@ Models:
       Epsilon: 1.0e-20
     Encoder:
       Depth: 16
-      Mults:  [1, 2, 3, 4, 4]
+      Mults: [ 1, 2, 4, 8 ] #[1, 2, 3, 4, 4] ; [1, 2, 4, 8]
       Norm: rms
       Kernel: 5
+      FirstStrideOne: False
       Padding: same
-      InputSize: [3, 64, 64]
+      InputSize: [ 3, 64, 64 ]
     Decoder:
       Depth: 16
-      Mults:  [1, 2, 3, 4, 4]
+      Mults: [ 1, 2, 4, 8 ] # [1, 2, 3, 4, 4] ; [1, 2, 4, 8]
       Norm: rms
       Kernel: 5
       Padding: same
-      FirstStrideOne: True
-      InputSize: [3, 64, 64]
+      FirstStrideOne: False
+      InputSize: [ 3, 64, 64 ]
       FinalLayerSigmoid: True
     Reward:
       HiddenUnits: 256
@@ -92,7 +108,6 @@ Models:
       d_intermediate: 0
       ssm_cfg:
         d_state: 16
-    
 
   Agent:
     dtype: float32
